--- a/src/package.json
+++ b/src/package.json
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "eslint": "^3.17.1",
+    "gulp": "^3.9.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-postcss": "^6.3.0",
     "typescript-eslint-parser": "^2.0.0"
   }
 }
