--- a/src/package.json
+++ b/src/package.json
@@ -5,9 +5,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:watch": "gulp",
+    "watch": "gulp",
     "dist": "NODE_ENV=production gulp dist",
-    "start": "node index.js"
+    "start": "node index.js",
+    "install":"npm install && bower install"
   },
   "author": "",
   "license": "ISC",
