--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,7 @@
     "watch": "gulp",
     "dist": "NODE_ENV=production gulp dist",
     "start": "node index.js",
-    "install":"npm install && bower install"
+    "install": "npm install && bower install"
   },
   "author": "",
   "license": "ISC",
@@ -27,7 +27,7 @@
     "gulp": "^3.9.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-nodemon": "^2.2.1",
-    "gulp-postcss": "^6.3.0",
+    "gulp-sass": "^3.1.0",
     "typescript-eslint-parser": "^2.0.0",
     "webpack": "^2.2.1"
   }
