--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,15 +1,20 @@
 {
     "compilerOptions": {
         "allowSyntheticDefaultImports": true,
+        "experimentalDecorators": true,
         "lib": [
             "dom",
             "es5",
             "es2015.Promise"
+        ],
+        "types": [
+            "node"
+         ],
+         "typeRoots": [
+           "node_modules/@types"
         ]
     },
-    "exclude": [
-        "node_modules"
-    ],
+
     "compileOnSave": false
 
 }
