--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,7 @@
     "watch": "gulp",
     "dist": "NODE_ENV=production gulp dist",
     "start": "node index.js",
-    "install": "npm install && bower install"
+    "preinstall": "npm install && bower install"
   },
   "author": "",
   "license": "ISC",
