--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "express": "^4.15.2",
+    "express-session": "^1.15.1",
     "i18n": "^0.8.3",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
