--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
     "i18n": "^0.8.3",
