--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.15.1",
     "i18n": "^0.8.3",
     "lodash": "^4.17.4",
+    "mongoose": "^4.9.4",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
     "showdown": "^1.6.4",
