--- a/src/package.json
+++ b/src/package.json
@@ -19,9 +19,11 @@
     "express-session": "^1.15.1",
     "i18n": "^0.8.3",
     "lodash": "^4.17.4",
+    "lowdb": "^0.16.2",
     "mongoose": "^4.9.4",
     "pug": "^2.0.0-beta11",
     "pug-loader": "^2.3.0",
+    "sequelize": "^3.30.4",
     "showdown": "^1.6.4",
     "ts-loader": "^2.0.1",
     "typescript": "^2.2.1",
