--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,6 @@ apps:
   - script : ./src/index.js
     name   : 'blog'
     env    :
-      NODE_ENV: development
-    env_production:
       NODE_ENV: production
+    env_dev:
+      NODE_ENV: development
