--- a/src/package.json
+++ b/src/package.json
@@ -14,14 +14,17 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.15.3",
+    "backbone": "^1.3.3",
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "handlebars": "^4.0.10",
+    "handlebars-loader": "^1.5.0",
     "i18n": "^0.8.3",
     "lodash": "^4.17.4",
     "lowdb": "^0.16.2",
     "mongoose": "^4.9.4",
-    "pug": "^2.0.0-beta11",
+    "pug": "^2.0.0-rc.3",
     "pug-loader": "^2.3.0",
     "sequelize": "^3.30.4",
     "showdown": "^1.6.4",
